# ShrubEnsembles

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  environment.yml  requirements.txt  setup.py
docs/: Doxyfile  conf.py  index.rst
python/: DecisionTree.py  OSE.py
src/: DecisionTree.h  GASE.h  MASE.h  OSE.h  Optimizer.h  PythonBindings.cpp  TreeEnsemble.h
src/ShrubEnsembles/: Compress.h  Datatypes.h  DecisionTree.h  DecisionTree.py  DecisionTreeNoConstexpr.h  DistanceDecisionTree.h  DistanceDecisionTree.py  EnsembleRegularizer.h  GASE.h  Losses.h  MASE.h  MASE.py  Matrix.h  OSE.h  Optimizer.h  PythonBindings.cpp  Tree.h  TreeEnsemble.h  TreeRegularizer.h  Utils.h
src/prime/: BalancedTree.h  BiasedProxEnsemble.h  CPrime.py  EnsembleRegularizer.h  Losses.h  OnlineLearner.py  Prime.h  Prime.py  PyBiasedProxEnsemble.py  PythonBindings.cpp  Tree.h  TreeRegularizer.h
src/se/: BalancedTree.h  Compress.h  Datatypes.h  DecisionTree.h  DecisionTreeV2.h  DistanceDecisionTree.h  DistributedShrubEnsemble.h  DistributedShrubEnsemble.py  EnsembleRegularizer.h  GASE.h  GASE.py  GAShrubEnsemble.h  GAShrubEnsemble.py  Losses.h  MASE.h  MASE.py  MAShrubEnsemble.h  MAShrubEnsemble.py  Matrix.h  OLD GAShrubEnsemble.h  OLD MAShrubEnsemble.h  OLD OnlineShrubEnsemble.h  OLD Serialization.h  OSE.h  OSE.py  OnlineShrubEnsemble.h  OnlineShrubEnsemble.py  Optimizer.h  PythonBindings.cpp  ShrubEnsemble.h  ShrubEnsemble.py  Tree.h  TreeEnsemble.h  TreeRegularizer.h  Utils.h
src/tmp/: DecisionTree.h
tests/: benchmark_tree.cpp  benchmark_tree.py  debug.cpp  debug.py  debug_serialization.cpp  test-mmap.py
